# server/src/controllers/main/comment.ts
@@ -1,12 +1,15 @@
 import { Router } from "express";
-import { userService, commentService } from "../../services";
+import { userService, commentService, communityService } from "../../services";
 
 const commentController = Router();
 
 commentController.post("/", async (req, res, next) => {
+  const { communityId } = req.body;
   try {
     const author = await userService.getAuthor(req.email);
     await commentService.create(req.body, author);
+    if (communityId)
+      await communityService.update(communityId, { $inc: { commentCount: 1 } });
     res.status(201).end();
   } catch (err) {
     next(err);
@@ -26,6 +29,11 @@ commentController.delete("/:commentId", async (req, res, next) => {
   const { commentId } = req.params;
   try {
     await commentService.checkAuthor(commentId, req.email);
+    const communityId = await commentService.getCommunityId(commentId);
+    if (communityId)
+      await communityService.update(communityId, {
+        $inc: { commentCount: -1 },
+      });
     await commentService.delete(commentId);
     res.status(200).end();
   } catch (err) {
