# server/src/controllers/main/index.ts
@@ -8,12 +8,13 @@ import searchController from "./search";
 import noticesController from "./notices";
 import matchesController from "./matches";
 import mypageController from "./mypage";
+import { loginCheck } from "../../middlewares";
 
 const mainController = Router();
 
 mainController.use("/auth", authController);
 mainController.use("/communities", communitiesController);
-mainController.use("/comment", commentController);
+mainController.use("/comment", loginCheck, commentController);
 mainController.use("/posts", postsController);
 mainController.use("/likes", likesController);
 mainController.use("/search", searchController);
